# AoE4-Replay-Launcher

./: .gitattributes  .gitignore  AoE4-Replay-Launcher.vbs  LICENSE  README.md  THIRD_PARTY_NOTICES.md  config.example.toml  pyproject.toml  setup.bat
.github/workflows/: release.yml  update-build-map.yml
data/: .gitkeep  aoe4-build-map.json  aoe4-manifest-history.json
docs/: index.html
docs/assets/: site.css
packaging/: AoE4-Replay-Launcher.spec  _make_icon.py  launcher_main.py  steamshim.c
scripts/: fetch_current_patch.py  gen_cldr.py  ingest_existing.py  update_build_map.py
src/aoe4replay/: __init__.py  aoe4world.py  buildcache.py  buildmap.py  cldr_datetime.json  cli.py  compose.py  config.py  contentindex.py  deltaseed.py  depot.py  hashcache.py  launch.py  manifest.py  panel.py  replay.py  resticrepo.py  service.py  steamqr.py  steamwrap.py  tools.py
